--- a/about.html
+++ b/about.html
@@ -154,7 +154,7 @@
 														</div>
 														<div class="fbox-content">
 															<h3 class="text-transform-none ls-0">Gestión de contenidos</h3>
-															<p>Te ayudamos a mantener y actualizar el contenido de tu sitio web y estar al día con las tendencias actuales.</p>
+															<p>Te ayudamos a mantener y actualizar el contenido de tu sitio web y manejo de redes sociales.</p>
 														</div>
 													</div>
 												</a>
@@ -324,13 +324,15 @@
 											</div>
 											<div class="fbox-content">
 												<h3 class="text-transform-none ls-0 text-larger">Gestión de contenidos</h3>
-												<p class="text-smaller">Te ayudamos a mantener y actualizar el contenido de tu sitio web y estar al día con las tendencias actuales..</p>
+												<p class="text-smaller">Te ayudamos a mantener y actualizar el contenido de tu sitio web y manejo de redes sociales.</p>
 											</div>
 											<ul class="iconlist ms-3 mt-4 mb-0">
-												<li class="mb-2 text-muted"><i class="fa-solid fa-check text-smaller color"></i> Información de tu landing page</li>
-												<li class="mb-2 text-muted"><i class="fa-solid fa-check text-smaller color"></i> Contenido de páginas adicionales</li>
-												<li class="mb-2 text-muted"><i class="fa-solid fa-check text-smaller color"></i> Gestionar imágenes</li>
-												<li class="mb-2 text-muted"><i class="fa-solid fa-check text-smaller color"></i> Optimizar para redes</li>
+												<li class="mb-2 text-muted"><i class="fa-solid fa-check text-smaller color"></i> Administración de contenido web</li>
+												<li class="mb-2 text-muted"><i class="fa-solid fa-check text-smaller color"></i> Manejo de redes sociales</li>
+												<li class="mb-2 text-muted"><i class="fa-solid fa-check text-smaller color"></i> Publicación de contenido</li>
+												<li class="mb-2 text-muted"><i class="fa-solid fa-check text-smaller color"></i> Copywriting</li>
+												<li class="mb-2 text-muted"><i class="fa-solid fa-check text-smaller color"></i> Atención al cliente en redes sociales</li>
+												<li class="mb-2 text-muted"><i class="fa-solid fa-check text-smaller color"></i> Respuesta a tus publicaciones</li>
 											</ul>
 										</div>
 									</div>
