--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 														</div>
 														<div class="fbox-content">
 															<h3 class="text-transform-none ls-0">Gestión de contenidos</h3>
-															<p>Te ayudamos a mantener y actualizar el contenido de tu sitio web y estar al día con las tendencias actuales.</p>
+															<p>Te ayudamos a mantener y actualizar el contenido de tu sitio web y manejo de redes sociales.</p>
 														</div>
 													</div>
 												</a>
@@ -273,7 +273,7 @@
 									</div>
 									<div class="fbox-content">
 										<h3 class="text-transform-none ls-0">Gestión de contenidos</h3>
-										<p>Te ayudamos a mantener y actualizar el contenido de tu sitio web y estar al día con las tendencias actuales.</p>
+										<p>Te ayudamos a mantener y actualizar el contenido de tu sitio web y manejo de redes sociales.</p>
 									</div>
 								</div>
 
