--- a/social.html
+++ b/social.html
@@ -154,7 +154,7 @@
 														</div>
 														<div class="fbox-content">
 															<h3 class="text-transform-none ls-0">Gestión de contenidos</h3>
-															<p>Te ayudamos a mantener y actualizar el contenido de tu sitio web y estar al día con las tendencias actuales.</p>
+															<p>Te ayudamos a mantener y actualizar el contenido de tu sitio web y manejo de redes sociales.</p>
 														</div>
 													</div>
 												</a>
@@ -179,7 +179,7 @@
 		<!-- Page Title
 		============================================= -->
 		<section class="page-title page-title-parallax parallax scroll-detect page-title-center dark include-header include-topbar">
-			<img src="demos/seo/images/servies/social-title.jpg" class="parallax-bg">
+			<img src="/demos/seo/images/services/social-title.jpg" class="parallax-bg">
 			<div id="particles-line"></div>
 
 			<div class="container">
@@ -214,7 +214,7 @@
 						<div class="col-lg-6">
 							<div class="badge rounded-pill badge-default">Servicios</div>
 							<h2 class="display-4 fw-bold">Gestión de contenidos.</h2>
-							<p>Te ayudamos a mantener y actualizar el contenido de tu sitio web y estar al día con las tendencias actuales.</p>
+							<p>Te ayudamos a mantener y actualizar el contenido de tu sitio web y manejo de redes sociales.</p>
 							<a href="/contact.html" class="button button-rounded button-large text-transform-none ls-0">Empezar</a>
 							<a href="/contact.html" class="button button-rounded button-large button-light text-dark bg-white border text-transform-none ls-0">Contacto</a>
 						</div>
@@ -237,7 +237,7 @@
 									<a href="#"><i class="bi-quote bg-info"></i></a>
 								</div>
 								<div class="fbox-content">
-									<h3 class="text-transform-none">Información de tu landing page</h3>
+									<h3 class="text-transform-none">Administración de contenido web</h3>
 									<p></p>
 								</div>
 							</div>
@@ -249,7 +249,7 @@
 									<a href="#"><i class="bi-quote bg-info"></i></a>
 								</div>
 								<div class="fbox-content">
-									<h3 class="text-transform-none">Contenido de páginas adicionales</h3>
+									<h3 class="text-transform-none">Manejo de redes sociales</h3>
 									<p></p>
 								</div>
 							</div>
@@ -261,7 +261,43 @@
 									<a href="#"><i class="bi-quote bg-info"></i></a>
 								</div>
 								<div class="fbox-content">
-									<h3 class="text-transform-none">Optimizar para redes</h3>
+									<h3 class="text-transform-none">Publicación de contenido</h3>
+									<p></p>
+								</div>
+							</div>
+						</div>
+
+                        <div class="col-sm-6 col-lg-4">
+							<div class="feature-box">
+								<div class="fbox-icon mb-4">
+									<a href="#"><i class="bi-quote bg-info"></i></a>
+								</div>
+								<div class="fbox-content">
+									<h3 class="text-transform-none">Copywriting</h3>
+									<p></p>
+								</div>
+							</div>
+						</div>
+
+                        <div class="col-sm-6 col-lg-4">
+							<div class="feature-box">
+								<div class="fbox-icon mb-4">
+									<a href="#"><i class="bi-quote bg-info"></i></a>
+								</div>
+								<div class="fbox-content">
+									<h3 class="text-transform-none">Atención al cliente en redes sociales</h3>
+									<p></p>
+								</div>
+							</div>
+						</div>
+
+                        <div class="col-sm-6 col-lg-4">
+							<div class="feature-box">
+								<div class="fbox-icon mb-4">
+									<a href="#"><i class="bi-quote bg-info"></i></a>
+								</div>
+								<div class="fbox-content">
+									<h3 class="text-transform-none">Respuesta a tus publicaciones</h3>
 									<p></p>
 								</div>
 							</div>
