--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
 						============================================= -->
 						<ul id="top-social">
 							<li><a href="" class="h-bg-instagram" target="_blank"><span class="ts-icon"><i class="fa-brands fa-instagram"></i></span><span class="ts-text">Instagram</span></a></li>
-							<li><a href="" class="h-bg-call"><span class="ts-icon"><i class="fa-solid fa-phone"></i></span><span class="ts-text">+58 412 865.67.80</span></a></li>
-							<li><a href="" class="h-bg-whatsapp"><span class="ts-icon"><i class="fa-brands fa-whatsapp"></i></span><span class="ts-text">+58 412 865.67.80</span></a></li>
-							<li><a href="" class="h-bg-email3"><span class="ts-icon"><i class="bi-envelope-fill"></i></span><span class="ts-text">hola@tusoluciontech.com</span></a></li>
+							<li><a href="https://wa.me/584128656780" target="_blank" class="h-bg-call"><span class="ts-icon"><i class="fa-solid fa-phone"></i></span><span class="ts-text">+58 412 865.67.80</span></a></li>
+							<li><a href="https://wa.me/584128656780" target="_blank" class="h-bg-whatsapp"><span class="ts-icon"><i class="fa-brands fa-whatsapp"></i></span><span class="ts-text">+58 412 865.67.80</span></a></li>
+							<li><a href="" class="h-bg-email3"><span class="ts-icon"><i class="bi-envelope-fill"></i></span><span class="ts-text">gustperxnegocio@gmail.com</span></a></li>
 						</ul><!-- #top-social end -->
 
 					</div>
@@ -399,14 +399,14 @@
 										<img src="/demos/seo/images/works/tecnolifeve.png" alt="Tecnolife-ve">
 										<div class="bg-overlay">
 											<div class="bg-overlay-content dark" data-hover-animate="fadeIn" data-hover-speed="500">
-												<a href="#" class="overlay-trigger-icon bg-light text-dark" data-hover-animate="fadeIn" data-hover-speed="500"><i class="uil uil-ellipsis-h"></i></a>
+												<a href="https://www.tecnolifeve.com" target="_blank" class="overlay-trigger-icon bg-light text-dark" data-hover-animate="fadeIn" data-hover-speed="500"><i class="uil uil-ellipsis-h"></i></a>
 											</div>
 											<div class="bg-overlay-bg dark" data-hover-animate="fadeIn" data-hover-speed="500"></div>
 										</div>
 									</div>
 									<div class="portfolio-desc">
-										<h3><a href="#">Tecnolife-ve</a></h3>
-										<span>Página web</span>
+										<h3><a href="https://www.tecnolifeve.com" target="_blank">Tecnolife-ve</a></h3>
+										<span>Web corporativa</span>
 									</div>
 								</div>
 							</article>
@@ -417,13 +417,13 @@
 										<img src="/demos/seo/images/works/gustperx.png" alt="gustperx">
 										<div class="bg-overlay">
 											<div class="bg-overlay-content dark" data-hover-animate="fadeIn" data-hover-speed="500">
-												<a href="#" class="overlay-trigger-icon bg-light text-dark" data-hover-animate="fadeIn" data-hover-speed="500"><i class="uil uil-ellipsis-h"></i></a>
+												<a href="https://gustperx.vercel.app" target="_blank" class="overlay-trigger-icon bg-light text-dark" data-hover-animate="fadeIn" data-hover-speed="500"><i class="uil uil-ellipsis-h"></i></a>
 											</div>
 											<div class="bg-overlay-bg dark" data-hover-animate="fadeIn" data-hover-speed="500"></div>
 										</div>
 									</div>
 									<div class="portfolio-desc">
-										<h3>Gustavo Perez</h3>
+										<h3><a href="https://gustperx.vercel.app" target="_blank">Gustavo Perez</a></h3>
 										<span>Portafolio online</span>
 									</div>
 								</div>
@@ -463,75 +463,41 @@
 				<div class="section mt-0" style="background: url('demos/seo/images/sections/3.jpg') no-repeat top center; background-size: cover; padding: 80px 0 70px;">
 					<div class="container">
 						<div class="heading-block border-bottom-0 text-center">
-							<div class="badge rounded-pill badge-default">Testimonios</div>
-							<h3 class="text-transform-none ls-0">Lo que dicen nuestros clientes</h3>
-						</div>
+							<div class="badge rounded-pill badge-default">Aliados</div>
+							<h3 class="text-transform-none ls-0">Aliados comerciales</h3>
+                            <p>Nuestros aliados están preparados para atender tus requerimientos tanto de nuestros productos así como servicios prestados por nuestros aliados.</p>
+                        </div>
 
-						<div id="oc-testi" class="owl-carousel testimonials-carousel carousel-widget" data-margin="0" data-pagi="true" data-loop="true" data-center="true" data-autoplay="5000" data-items-xs="1" data-items-sm="1" data-items-md="2" data-items-xl="3">
-
-							<div class="oc-item">
-								<div class="card rounded-6 shadow border-0">
-									<img class="testimonial-image rounded-circle p-2 bg-white" src="/demos/pet/images/testimonials/1.jpg" alt="Customer Testimonails">
-									<div class="card-body p-4 pt-2 position-relative overflow-hidden">
-										<div class="row">
-											<div class="col-12 text-center">
-												<p class="mb-4 font-primary fst-normal">Incidunt deleniti blanditiis quas aperiam recusandae consequatur ullam quibusdam cum libero illo rerum repellendus!</p>
-												<h4 class="h6 mb-0 fw-bold">John Doe</h4>
-												<small class="text-muted">XYZ Inc.</small>
-											</div>
-										</div>
-										<div class="bg-icon bi-quote op-02"></div>
-									</div>
-								</div>
-							</div>
-							<div class="oc-item">
-								<div class="card rounded-6 shadow border-0">
-									<img class="testimonial-image rounded-circle p-2 bg-white" src="/demos/pet/images/testimonials/2.jpg" alt="Customer Testimonails">
-									<div class="card-body p-4 pt-2 position-relative overflow-hidden">
-										<div class="row">
-											<div class="col-12 text-center">
-												<p class="mb-4 font-primary fst-normal">Natus voluptatum enim quod necessitatibus quis expedita harum provident eos obcaecati id culpa corporis molestias.</p>
-												<h4 class="h6 mb-0 fw-bold">Collis Ta'eed</h4>
-												<small class="text-muted">Envato Inc.</small>
-											</div>
-										</div>
-										<div class="bg-icon bi-quote op-02"></div>
-									</div>
-								</div>
-							</div>
-							<div class="oc-item">
-								<div class="card rounded-6 shadow border-0">
-									<img class="testimonial-image rounded-circle p-2 bg-white" src="/demos/pet/images/testimonials/3.jpg" alt="Customer Testimonails">
-									<div class="card-body p-4 pt-2 position-relative overflow-hidden">
-										<div class="row">
-											<div class="col-12 text-center">
-												<p class="mb-4 font-primary fst-normal">Natus voluptatum enim quod necessitatibus quis expedita harum provident eos obcaecati id culpa corporis molestias.</p>
-												<h4 class="h6 mb-0 fw-bold">Cyan Ta'eed</h4>
-												<small class="text-muted">Milkshake Inc.</small>
-											</div>
-										</div>
-										<div class="bg-icon bi-quote op-02"></div>
-									</div>
-								</div>
-							</div>
-							<div class="oc-item">
-								<div class="card rounded-6 shadow border-0">
-									<img class="testimonial-image rounded-circle p-2 bg-white" src="/demos/pet/images/testimonials/4.jpg" alt="Customer Testimonails">
-									<div class="card-body p-4 pt-2 position-relative overflow-hidden">
-										<div class="row">
-											<div class="col-12 text-center">
-												<p class="mb-4 font-primary fst-normal">Natus voluptatum enim quod necessitatibus quis expedita harum provident eos obcaecati id culpa corporis molestias.</p>
-												<h4 class="h6 mb-0 fw-bold">Mary Jane</h4>
-												<small class="text-muted">Google Inc.</small>
-											</div>
-										</div>
-										<div class="bg-icon bi-quote op-02"></div>
-									</div>
-								</div>
-							</div>
-							
-
-						</div>
+                        <div class="row col-mb-50 mb-0">
+                            <div class="col-lg-12">
+                                <div class="team team-list row align-items-center">
+                                    <div class="team-image col-sm-6">
+                                        <a href="https://www.tecnolifeve.com" target="_blank">
+                                            <img src="/demos/seo/images/works/tecnolifeve.png" alt="Tecnolife-ve" class="rounded-6">
+                                        </a>
+                                    </div>
+                                    <div class="team-desc col-sm-6">
+                                        <div class="team-title"><h4>Tecnolife-ve</h4><span>Gerson Coronado. CEO de Tecnolife-ve</span></div>
+                                        <div class="team-content">Servicio técnico de telefonía, redes y computación. Venta de equipos, repuestos, accesorios, manejo de redes sociales y asesoría técnica profesional.</div>
+                                        <div class="d-flex mt-4">
+                                            <a href="#" class="social-icon si-small rounded-circle text-white bg-facebook">
+                                                <i class="fa-brands fa-facebook-f"></i>
+                                                <i class="fa-brands fa-facebook-f"></i>
+                                            </a>
+                                            <a href="#" class="social-icon si-small rounded-circle text-white bg-x-twitter">
+                                                <i class="fa-brands fa-x-twitter"></i>
+                                                <i class="fa-brands fa-x-twitter"></i>
+                                            </a>
+                                            <a href="#" class="social-icon si-small rounded-circle text-white bg-instagram">
+                                                <i class="fa-brands fa-instagram"></i>
+                                                <i class="fa-brands fa-instagram"></i>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        
 					</div>
 				</div>
 
@@ -598,7 +564,7 @@
 											</div>
 											<div class="fbox-content">
 												<span class="text-muted">Correo electrónico:</span><br>
-												<h3 class="text-transform-none ls-0 fw-semibold">hola@tusoluciontech.com</h3>
+												<h3 class="text-transform-none ls-0 fw-semibold">gustperxnegocio@gmail.com</h3>
 											</div>
 										</div>
 									</div>
@@ -618,11 +584,11 @@
 									</div>
 									<div class="col-lg-6 col-md-12 col-6">
 										<div class="d-flex align-items-center">
-											<a href="" target="_blank" class="social-icon bg-dark h-bg-whatsapp mb-0 me-2">
+											<a href="https://wa.me/584128656780" target="_blank" class="social-icon bg-dark h-bg-whatsapp mb-0 me-2">
 												<i class="fa-brands fa-whatsapp"></i>
 												<i class="fa-brands fa-whatsapp"></i>
 											</a>
-											<a href="" target="_blank" class="text-dark"><small><strong class="d-block">Whatsapp</strong>Chat</small></a>
+											<a href="https://wa.me/584128656780" target="_blank" class="text-dark"><small><strong class="d-block">Whatsapp</strong>Chat</small></a>
 										</div>
 									</div>
 								</div>
