--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
 
 		<!-- Top Bar
 		============================================= -->
-		<div id="top-bar" class="transparent-topbar">
+		<div id="top-bar" class="transparent-topbar dark">
 			<div class="container">
 
 				<div class="row justify-content-between">
@@ -65,9 +65,9 @@
 						============================================= -->
 						<ul id="top-social">
 							<li><a href="" class="h-bg-instagram" target="_blank"><span class="ts-icon"><i class="fa-brands fa-instagram"></i></span><span class="ts-text">Instagram</span></a></li>
-							<li><a href="" class="h-bg-call"><span class="ts-icon"><i class="fa-solid fa-phone"></i></span><span class="ts-text">+58 412 865.67.80</span></a></li>
-							<li><a href="" class="h-bg-whatsapp"><span class="ts-icon"><i class="fa-brands fa-whatsapp"></i></span><span class="ts-text">+58 412 865.67.80</span></a></li>
-							<li><a href="" class="h-bg-email3"><span class="ts-icon"><i class="bi-envelope-fill"></i></span><span class="ts-text">hola@tusoluciontech.com</span></a></li>
+							<li><a href="https://wa.me/584128656780" target="_blank" class="h-bg-call"><span class="ts-icon"><i class="fa-solid fa-phone"></i></span><span class="ts-text">+58 412 865.67.80</span></a></li>
+							<li><a href="https://wa.me/584128656780" target="_blank" class="h-bg-whatsapp"><span class="ts-icon"><i class="fa-brands fa-whatsapp"></i></span><span class="ts-text">+58 412 865.67.80</span></a></li>
+							<li><a href="" class="h-bg-email3"><span class="ts-icon"><i class="bi-envelope-fill"></i></span><span class="ts-text">gustperxnegocio@gmail.com</span></a></li>
 						</ul><!-- #top-social end -->
 
 					</div>
@@ -216,7 +216,7 @@
 									<div class="badge rounded-pill badge-default">Gestión de negocio</div>
 									<h3 class="text-transform-none ls-0 mb-3">Vea cómo crece su negocio mes a mes</h3>
 									<p>Creamos soluciones que se adaptan a tus necesidades poniendo a disposición las mejores tecnologías, para que mejores el desarrollo y la productividad de tu negocio.</p>
-									<a href="#" class="button button-rounded text-capitalize m-0 ls-0">Empezar</a>
+									<a href="/contact.html" class="button button-rounded text-capitalize m-0 ls-0">Empezar</a>
 								</div>
 							</div>
 							<div class="col-md-6">
@@ -390,7 +390,7 @@
 
 				<!-- Testimonials
 				============================================= -->
-				<div class="section mt-0" style="background: url('demos/seo/images/sections/3.jpg') no-repeat top center; background-size: cover; padding: 0 0 70px;">
+				<!-- <div class="section mt-0" style="background: url('demos/seo/images/sections/3.jpg') no-repeat top center; background-size: cover; padding: 0 0 70px;">
 					<div class="container">
 						<div class="heading-block border-bottom-0 text-center">
 							<div class="badge rounded-pill badge-default">Testimonials</div>
@@ -477,7 +477,7 @@
 
 						</div>
 					</div>
-				</div>
+				</div> -->
 
 				
 			</div>
@@ -543,7 +543,7 @@
 											</div>
 											<div class="fbox-content">
 												<span class="text-muted">Correo electrónico:</span><br>
-												<h3 class="text-transform-none ls-0 fw-semibold">hola@tusoluciontech.com</h3>
+												<h3 class="text-transform-none ls-0 fw-semibold">gustperxnegocio@gmail.com</h3>
 											</div>
 										</div>
 									</div>
@@ -563,11 +563,11 @@
 									</div>
 									<div class="col-lg-6 col-md-12 col-6">
 										<div class="d-flex align-items-center">
-											<a href="" target="_blank" class="social-icon bg-dark h-bg-whatsapp mb-0 me-2">
+											<a href="https://wa.me/584128656780" target="_blank" class="social-icon bg-dark h-bg-whatsapp mb-0 me-2">
 												<i class="fa-brands fa-whatsapp"></i>
 												<i class="fa-brands fa-whatsapp"></i>
 											</a>
-											<a href="" target="_blank" class="text-dark"><small><strong class="d-block">Whatsapp</strong>Chat</small></a>
+											<a href="https://wa.me/584128656780" target="_blank" class="text-dark"><small><strong class="d-block">Whatsapp</strong>Chat</small></a>
 										</div>
 									</div>
 								</div>
