--- a/contact.html
+++ b/contact.html
@@ -65,9 +65,9 @@
 						============================================= -->
 						<ul id="top-social">
 							<li><a href="" class="h-bg-instagram" target="_blank"><span class="ts-icon"><i class="fa-brands fa-instagram"></i></span><span class="ts-text">Instagram</span></a></li>
-							<li><a href="" class="h-bg-call"><span class="ts-icon"><i class="fa-solid fa-phone"></i></span><span class="ts-text">+58 412 865.67.80</span></a></li>
-							<li><a href="" class="h-bg-whatsapp"><span class="ts-icon"><i class="fa-brands fa-whatsapp"></i></span><span class="ts-text">+58 412 865.67.80</span></a></li>
-							<li><a href="" class="h-bg-email3"><span class="ts-icon"><i class="bi-envelope-fill"></i></span><span class="ts-text">hola@tusoluciontech.com</span></a></li>
+							<li><a href="https://wa.me/584128656780" target="_blank" class="h-bg-call"><span class="ts-icon"><i class="fa-solid fa-phone"></i></span><span class="ts-text">+58 412 865.67.80</span></a></li>
+							<li><a href="https://wa.me/584128656780" target="_blank" class="h-bg-whatsapp"><span class="ts-icon"><i class="fa-brands fa-whatsapp"></i></span><span class="ts-text">+58 412 865.67.80</span></a></li>
+							<li><a href="" class="h-bg-email3"><span class="ts-icon"><i class="bi-envelope-fill"></i></span><span class="ts-text">gustperxnegocio@gmail.com</span></a></li>
 						</ul><!-- #top-social end -->
 
 					</div>
@@ -232,7 +232,7 @@
 								<div class="fbox-content">
 									<h3 class="text-transform-none ls-0 mb-4">Contacta con nosotros:</h3>
 									<p class="text-smaller mb-3">Puedes comunicarte mediante correo electrónico, llamada telefónica o mensaje directo.</p>
-									<a class="btn btn-link" href=""><u>hola@tusoluciontech.com</u></a>
+									<a class="btn btn-link" href=""><u>gustperxnegocio@gmail.com</u></a>
 									<a class="btn btn-link" href=""><u>+58 412 865.67.80</u></a>
 								</div>
 							</div>
@@ -324,7 +324,7 @@
 											</div>
 											<div class="fbox-content">
 												<span class="text-muted">Correo electrónico:</span><br>
-												<h3 class="text-transform-none ls-0 fw-semibold">hola@tusoluciontech.com</h3>
+												<h3 class="text-transform-none ls-0 fw-semibold">gustperxnegocio@gmail.com</h3>
 											</div>
 										</div>
 									</div>
@@ -344,11 +344,11 @@
 									</div>
 									<div class="col-lg-6 col-md-12 col-6">
 										<div class="d-flex align-items-center">
-											<a href="" target="_blank" class="social-icon bg-dark h-bg-whatsapp mb-0 me-2">
+											<a href="https://wa.me/584128656780" target="_blank" class="social-icon bg-dark h-bg-whatsapp mb-0 me-2">
 												<i class="fa-brands fa-whatsapp"></i>
 												<i class="fa-brands fa-whatsapp"></i>
 											</a>
-											<a href="" target="_blank" class="text-dark"><small><strong class="d-block">Whatsapp</strong>Chat</small></a>
+											<a href="https://wa.me/584128656780" target="_blank" class="text-dark"><small><strong class="d-block">Whatsapp</strong>Chat</small></a>
 										</div>
 									</div>
 								</div>
