--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
 							<li><a href="" class="h-bg-instagram" target="_blank"><span class="ts-icon"><i class="fa-brands fa-instagram"></i></span><span class="ts-text">Instagram</span></a></li>
 							<li><a href="https://wa.me/584128656780" target="_blank" class="h-bg-call"><span class="ts-icon"><i class="fa-solid fa-phone"></i></span><span class="ts-text">+58 412 865.67.80</span></a></li>
 							<li><a href="https://wa.me/584128656780" target="_blank" class="h-bg-whatsapp"><span class="ts-icon"><i class="fa-brands fa-whatsapp"></i></span><span class="ts-text">+58 412 865.67.80</span></a></li>
-							<li><a href="" class="h-bg-email3"><span class="ts-icon"><i class="bi-envelope-fill"></i></span><span class="ts-text">gustperxnegocio@gmail.com</span></a></li>
+							<li><a href="" class="h-bg-email3"><span class="ts-icon"><i class="bi-envelope-fill"></i></span><span class="ts-text">hola@tusoluciontech.com</span></a></li>
 						</ul><!-- #top-social end -->
 
 					</div>
@@ -543,7 +543,7 @@
 											</div>
 											<div class="fbox-content">
 												<span class="text-muted">Correo electrónico:</span><br>
-												<h3 class="text-transform-none ls-0 fw-semibold">gustperxnegocio@gmail.com</h3>
+												<h3 class="text-transform-none ls-0 fw-semibold">hola@tusoluciontech.com</h3>
 											</div>
 										</div>
 									</div>
