--- a/consultancy.html
+++ b/consultancy.html
@@ -64,10 +64,11 @@
 						<!-- Top Social
 						============================================= -->
 						<ul id="top-social">
-							<li><a href="" class="h-bg-instagram" target="_blank"><span class="ts-icon"><i class="fa-brands fa-instagram"></i></span><span class="ts-text">Instagram</span></a></li>
+							<li><a href="https://www.instagram.com/tusoluciontech.ve?igsh=MXRqYzI3bHlscHF5eg==" class="h-bg-instagram" target="_blank"><span class="ts-icon"><i class="fa-brands fa-instagram"></i></span><span class="ts-text">@tusoluciontech.ve</span></a></li>
+							<li><a href="https://x.com/tusoluciontech?t=p6oFNNscrVKRP-MbpKnOkQ&s=08" class="h-bg-x-twitter" target="_blank"><span class="ts-icon"><i class="fa-brands fa-x"></i></span><span class="ts-text">@tusoluciontech</span></a></li>
 							<li><a href="https://wa.me/584128656780" target="_blank" class="h-bg-call"><span class="ts-icon"><i class="fa-solid fa-phone"></i></span><span class="ts-text">+58 412 865.67.80</span></a></li>
 							<li><a href="https://wa.me/584128656780" target="_blank" class="h-bg-whatsapp"><span class="ts-icon"><i class="fa-brands fa-whatsapp"></i></span><span class="ts-text">+58 412 865.67.80</span></a></li>
-							<li><a href="" class="h-bg-email3"><span class="ts-icon"><i class="bi-envelope-fill"></i></span><span class="ts-text">hola@tusoluciontech.com</span></a></li>
+							<li><a href="mailto:hola@tusoluciontech.com" class="h-bg-email3"><span class="ts-icon"><i class="bi-envelope-fill"></i></span><span class="ts-text">hola@tusoluciontech.com</span></a></li>
 						</ul><!-- #top-social end -->
 
 					</div>
@@ -344,11 +345,11 @@
 								<div class="row col-mb-30">
 									<div class="col-lg-6 col-md-12 col-6">
 										<div class="d-flex align-items-center">
-											<a href="" target="_blank" class="social-icon bg-dark h-bg-instagram mb-0 me-2">
+											<a href="https://www.instagram.com/tusoluciontech.ve?igsh=MXRqYzI3bHlscHF5eg==" target="_blank" class="social-icon bg-dark h-bg-instagram mb-0 me-2">
 												<i class="fa-brands fa-instagram"></i>
 												<i class="fa-brands fa-instagram"></i>
 											</a>
-											<a href="" target="_blank" class="text-dark"><small><strong class="d-block">Síguenos en </strong>Instagram</small></a>
+											<a href="https://www.instagram.com/tusoluciontech.ve?igsh=MXRqYzI3bHlscHF5eg==" target="_blank" class="text-dark"><small><strong class="d-block">Síguenos en </strong>Instagram</small></a>
 										</div>
 									</div>
 									<div class="col-lg-6 col-md-12 col-6">
