--- a/contact.html
+++ b/contact.html
@@ -64,10 +64,11 @@
 						<!-- Top Social
 						============================================= -->
 						<ul id="top-social">
-							<li><a href="" class="h-bg-instagram" target="_blank"><span class="ts-icon"><i class="fa-brands fa-instagram"></i></span><span class="ts-text">Instagram</span></a></li>
+							<li><a href="https://www.instagram.com/tusoluciontech.ve?igsh=MXRqYzI3bHlscHF5eg==" class="h-bg-instagram" target="_blank"><span class="ts-icon"><i class="fa-brands fa-instagram"></i></span><span class="ts-text">@tusoluciontech.ve</span></a></li>
+							<li><a href="https://x.com/tusoluciontech?t=p6oFNNscrVKRP-MbpKnOkQ&s=08" class="h-bg-x-twitter" target="_blank"><span class="ts-icon"><i class="fa-brands fa-x"></i></span><span class="ts-text">@tusoluciontech</span></a></li>
 							<li><a href="https://wa.me/584128656780" target="_blank" class="h-bg-call"><span class="ts-icon"><i class="fa-solid fa-phone"></i></span><span class="ts-text">+58 412 865.67.80</span></a></li>
 							<li><a href="https://wa.me/584128656780" target="_blank" class="h-bg-whatsapp"><span class="ts-icon"><i class="fa-brands fa-whatsapp"></i></span><span class="ts-text">+58 412 865.67.80</span></a></li>
-							<li><a href="" class="h-bg-email3"><span class="ts-icon"><i class="bi-envelope-fill"></i></span><span class="ts-text">hola@tusoluciontech.com</span></a></li>
+							<li><a href="mailto:hola@tusoluciontech.com" class="h-bg-email3"><span class="ts-icon"><i class="bi-envelope-fill"></i></span><span class="ts-text">hola@tusoluciontech.com</span></a></li>
 						</ul><!-- #top-social end -->
 
 					</div>
@@ -217,9 +218,8 @@
 								</div>
 								<div class="fbox-content">
 									<h3 class="text-transform-none ls-0 mb-4">Ubicación:</h3>
-									<p class="text-smaller mb-3">Av Bolivar, Maracay.</p>
-									<u>Direccion<br>
-                                    Direccion</u>
+									<p class="text-smaller mb-3">Nuestro aliado Tecnolife-ve</p>
+									<p>Av. Bolivar con Soublette, Centro, Maracay frente a la Plaza Bicentenaria, local E-26</p>
 								</div>
 							</div>
 						</div>
@@ -231,9 +231,9 @@
 								</div>
 								<div class="fbox-content">
 									<h3 class="text-transform-none ls-0 mb-4">Contacta con nosotros:</h3>
-									<p class="text-smaller mb-3">Puedes comunicarte mediante correo electrónico, llamada telefónica o mensaje directo.</p>
-									<a class="btn btn-link" href=""><u>hola@tusoluciontech.com</u></a>
-									<a class="btn btn-link" href=""><u>+58 412 865.67.80</u></a>
+									<!-- <p class="text-smaller mb-3">Puedes comunicarte mediante correo electrónico, llamada telefónica o mensaje directo.</p> -->
+									<a class="btn btn-link" href="mailto:hola@tusoluciontech.com"><u>hola@tusoluciontech.com</u></a>
+									<a class="btn btn-link" href="https://wa.me/584128656780" target="_blank"><u>+58 412 865.67.80</u></a>
 								</div>
 							</div>
 						</div>
@@ -245,8 +245,8 @@
 								</div>
 								<div class="fbox-content">
 									<h3 class="text-transform-none ls-0 mb-4">Live Chat:</h3>
-									<p class="text-smaller mb-3">Inicia un chat directo mediante WhatsApp para aclarar dudas y preguntas del servicio.</p>
-									<a href="https://wa.me/584128656780"><u>Haga clic aquí</u></a>
+									<!-- <p class="text-smaller mb-3">Inicia un chat directo mediante WhatsApp para aclarar dudas y preguntas del servicio.</p> -->
+									<a href="https://wa.me/584128656780" target="_blank"><u>Haga clic aquí</u></a>
 								</div>
 							</div>
 						</div>
@@ -258,7 +258,7 @@
 				<!-- Google Map
 				============================================= -->
 				<div class="text-center col-lg-12 min-vh-40">
-                    <img src="https://www.datocms-assets.com/132513/1715536313-map.png" alt="ubicación">
+                    <img src="https://www.datocms-assets.com/132513/1716861210-mapa.jpg" alt="ubicación">
                 </div>
                 
 			</div>
@@ -335,11 +335,11 @@
 								<div class="row col-mb-30">
 									<div class="col-lg-6 col-md-12 col-6">
 										<div class="d-flex align-items-center">
-											<a href="" target="_blank" class="social-icon bg-dark h-bg-instagram mb-0 me-2">
+											<a href="https://www.instagram.com/tusoluciontech.ve?igsh=MXRqYzI3bHlscHF5eg==" target="_blank" class="social-icon bg-dark h-bg-instagram mb-0 me-2">
 												<i class="fa-brands fa-instagram"></i>
 												<i class="fa-brands fa-instagram"></i>
 											</a>
-											<a href="" target="_blank" class="text-dark"><small><strong class="d-block">Síguenos en </strong>Instagram</small></a>
+											<a href="https://www.instagram.com/tusoluciontech.ve?igsh=MXRqYzI3bHlscHF5eg==" target="_blank" class="text-dark"><small><strong class="d-block">Síguenos en </strong>Instagram</small></a>
 										</div>
 									</div>
 									<div class="col-lg-6 col-md-12 col-6">
