--- a/index.html
+++ b/index.html
@@ -64,10 +64,11 @@
 						<!-- Top Social
 						============================================= -->
 						<ul id="top-social">
-							<li><a href="" class="h-bg-instagram" target="_blank"><span class="ts-icon"><i class="fa-brands fa-instagram"></i></span><span class="ts-text">Instagram</span></a></li>
+							<li><a href="https://www.instagram.com/tusoluciontech.ve?igsh=MXRqYzI3bHlscHF5eg==" class="h-bg-instagram" target="_blank"><span class="ts-icon"><i class="fa-brands fa-instagram"></i></span><span class="ts-text">@tusoluciontech.ve</span></a></li>
+							<li><a href="https://x.com/tusoluciontech?t=p6oFNNscrVKRP-MbpKnOkQ&s=08" class="h-bg-x-twitter" target="_blank"><span class="ts-icon"><i class="fa-brands fa-x"></i></span><span class="ts-text">@tusoluciontech</span></a></li>
 							<li><a href="https://wa.me/584128656780" target="_blank" class="h-bg-call"><span class="ts-icon"><i class="fa-solid fa-phone"></i></span><span class="ts-text">+58 412 865.67.80</span></a></li>
 							<li><a href="https://wa.me/584128656780" target="_blank" class="h-bg-whatsapp"><span class="ts-icon"><i class="fa-brands fa-whatsapp"></i></span><span class="ts-text">+58 412 865.67.80</span></a></li>
-							<li><a href="" class="h-bg-email3"><span class="ts-icon"><i class="bi-envelope-fill"></i></span><span class="ts-text">hola@tusoluciontech.com</span></a></li>
+							<li><a href="mailto:hola@tusoluciontech.com" class="h-bg-email3"><span class="ts-icon"><i class="bi-envelope-fill"></i></span><span class="ts-text">hola@tusoluciontech.com</span></a></li>
 						</ul><!-- #top-social end -->
 
 					</div>
@@ -480,15 +481,23 @@
                                         <div class="team-title"><h4>Tecnolife-ve</h4><span>Gerson Coronado. CEO de Tecnolife-ve</span></div>
                                         <div class="team-content">Servicio técnico de telefonía, redes y computación. Venta de equipos, repuestos, accesorios, manejo de redes sociales y asesoría técnica profesional.</div>
                                         <div class="d-flex mt-4">
-                                            <a href="#" class="social-icon si-small rounded-circle text-white bg-facebook">
+                                            <a href="https://www.tecnolifeve.com" target="_blank" class="social-icon si-small rounded-circle text-white bg-x-twitter">
+                                                <i class="fa-solid fa-globe"></i>
+                                                <i class="fa-solid fa-globe"></i>
+                                            </a>
+                                            <a href="https://wa.me/584243394688" target="_blank" class="social-icon si-small rounded-circle text-white bg-whatsapp">
+                                                <i class="fa-brands fa-whatsapp"></i>
+                                                <i class="fa-brands fa-whatsapp"></i>
+                                            </a>
+                                            <a href="https://www.facebook.com/tecnolifeve" target="_blank" class="social-icon si-small rounded-circle text-white bg-facebook">
                                                 <i class="fa-brands fa-facebook-f"></i>
                                                 <i class="fa-brands fa-facebook-f"></i>
                                             </a>
-                                            <a href="#" class="social-icon si-small rounded-circle text-white bg-x-twitter">
+                                            <a href="https://twitter.com/TecnolifeVe" target="_blank" class="social-icon si-small rounded-circle text-white bg-x-twitter">
                                                 <i class="fa-brands fa-x-twitter"></i>
                                                 <i class="fa-brands fa-x-twitter"></i>
                                             </a>
-                                            <a href="#" class="social-icon si-small rounded-circle text-white bg-instagram">
+                                            <a href="https://www.instagram.com/tecnolifeve/" target="_blank" class="social-icon si-small rounded-circle text-white bg-instagram">
                                                 <i class="fa-brands fa-instagram"></i>
                                                 <i class="fa-brands fa-instagram"></i>
                                             </a>
@@ -575,11 +584,11 @@
 								<div class="row col-mb-30">
 									<div class="col-lg-6 col-md-12 col-6">
 										<div class="d-flex align-items-center">
-											<a href="" target="_blank" class="social-icon bg-dark h-bg-instagram mb-0 me-2">
+											<a href="https://www.instagram.com/tusoluciontech.ve?igsh=MXRqYzI3bHlscHF5eg==" target="_blank" class="social-icon bg-dark h-bg-instagram mb-0 me-2">
 												<i class="fa-brands fa-instagram"></i>
 												<i class="fa-brands fa-instagram"></i>
 											</a>
-											<a href="" target="_blank" class="text-dark"><small><strong class="d-block">Síguenos en </strong>Instagram</small></a>
+											<a href="https://www.instagram.com/tusoluciontech.ve?igsh=MXRqYzI3bHlscHF5eg==" target="_blank" class="text-dark"><small><strong class="d-block">Síguenos en </strong>Instagram</small></a>
 										</div>
 									</div>
 									<div class="col-lg-6 col-md-12 col-6">
