--- a/about.html
+++ b/about.html
@@ -94,7 +94,7 @@
 						</div><!-- #logo end -->
 
 						<div class="header-misc">
-							<a href="/contact.html" class="button button-rounded ms-3 d-none d-sm-block">Empezar</a>
+							<a href="https://wa.me/584128656780" target="_blank" class="button button-rounded ms-3 d-none d-sm-block">Empezar</a>
 						</div>
 
 						<div class="primary-menu-trigger">
@@ -217,7 +217,7 @@
 									<div class="badge rounded-pill badge-default">Gestión de negocio</div>
 									<h3 class="text-transform-none ls-0 mb-3">Vea cómo crece su negocio mes a mes</h3>
 									<p>Creamos soluciones que se adaptan a tus necesidades poniendo a disposición las mejores tecnologías, para que mejores el desarrollo y la productividad de tu negocio.</p>
-									<a href="/contact.html" class="button button-rounded text-capitalize m-0 ls-0">Empezar</a>
+									<a href="https://wa.me/584128656780" target="_blank" class="button button-rounded text-capitalize m-0 ls-0">Empezar</a>
 								</div>
 							</div>
 							<div class="col-md-6">
