--- a/consultancy.html
+++ b/consultancy.html
@@ -94,7 +94,7 @@
 						</div><!-- #logo end -->
 
 						<div class="header-misc">
-							<a href="/contact.html" class="button button-rounded ms-3 d-none d-sm-block">Empezar</a>
+							<a href="https://wa.me/584128656780" target="_blank" class="button button-rounded ms-3 d-none d-sm-block">Empezar</a>
 						</div>
 
 						<div class="primary-menu-trigger">
@@ -216,7 +216,7 @@
 							<div class="badge rounded-pill badge-default">Servicios</div>
 							<h2 class="display-4 fw-bold">Consultoría.</h2>
 							<p>Ofrecemos consultoría organizacional en cada área que tu negocio necesite. Deja tu organización en manos de expertos, nuestro servicio especializado hará que consigas resaltar en cada área que desees proyectar, te ayudamos a crear y elevar estrategias que se adaptan a lo que requieres, ofreciendo la calidad merecida que esperan tus clientes.</p>
-							<a href="/contact.html" class="button button-rounded button-large text-transform-none ls-0">Empezar</a>
+							<a href="https://wa.me/584128656780" target="_blank" class="button button-rounded button-large text-transform-none ls-0">Empezar</a>
 							<a href="/contact.html" class="button button-rounded button-large button-light text-dark bg-white border text-transform-none ls-0">Contacto</a>
 						</div>
 						<div class="col-lg-6 mt-4 mt-lg-0">
