--- a/contact.html
+++ b/contact.html
@@ -94,7 +94,7 @@
 						</div><!-- #logo end -->
 
 						<div class="header-misc">
-							<a href="/contact.html" class="button button-rounded ms-3 d-none d-sm-block">Empezar</a>
+							<a href="https://wa.me/584128656780" target="_blank" class="button button-rounded ms-3 d-none d-sm-block">Empezar</a>
 						</div>
 
 						<div class="primary-menu-trigger">
