--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 						</div><!-- #logo end -->
 
 						<div class="header-misc">
-							<a href="/contact.html" class="button button-rounded ms-3 d-none d-sm-block">Empezar</a>
+							<a href="https://wa.me/584128656780" target="_blank" class="button button-rounded ms-3 d-none d-sm-block">Empezar</a>
 						</div>
 
 						<div class="primary-menu-trigger">
@@ -189,7 +189,7 @@
 								<div class="slider-title">
 									<img src="images/logo1.png" alt="Feature Icon" class="bg-transparent rounded-0">
 									<p>Te brindamos apoyo y acompañamiento en la creación de soluciones que se adapten a tu negocio, Desarrollo Web, Desarrollo de Software, Consultoría.</p>
-									<a href="/contact.html" class="button button-rounded button-large text-transform-none ls-0">Empezar</a>
+									<a href="https://wa.me/584128656780" target="_blank" class="button button-rounded button-large text-transform-none ls-0">Empezar</a>
 									<a href="/contact.html" class="button button-rounded button-large button-light text-dark bg-white border text-transform-none ls-0">Contacto</a>
 								</div>
 							</div>
