--- a/software-development.html
+++ b/software-development.html
@@ -94,7 +94,7 @@
 						</div><!-- #logo end -->
 
 						<div class="header-misc">
-							<a href="/contact.html" class="button button-rounded ms-3 d-none d-sm-block">Empezar</a>
+							<a href="https://wa.me/584128656780" target="_blank" class="button button-rounded ms-3 d-none d-sm-block">Empezar</a>
 						</div>
 
 						<div class="primary-menu-trigger">
@@ -217,7 +217,7 @@
 							<h2 class="display-4 fw-bold">Desarrollo de Software.</h2>
 							<p>La innovación siempre será nuestra bandera y carta de presentación.</p>
 							<p>En TuSoluciónTech nos destacamos por trabajar siempre de la mano de nuestro cliente, porque entendemos que se trata de su proyecto y queremos que forme parte de cada paso; es por ello que todos nuestros servicios cuentan con diferentes características, en las que el cliente aporta al tiempo que supervisa el proceso.</p>
-							<a href="/contact.html" class="button button-rounded button-large text-transform-none ls-0">Empezar</a>
+							<a href="https://wa.me/584128656780" target="_blank" class="button button-rounded button-large text-transform-none ls-0">Empezar</a>
 							<a href="/contact.html" class="button button-rounded button-large button-light text-dark bg-white border text-transform-none ls-0">Contacto</a>
 						</div>
 						<div class="col-lg-6 mt-4 mt-lg-0">
