--- a/web-development.html
+++ b/web-development.html
@@ -94,7 +94,7 @@
 						</div><!-- #logo end -->
 
 						<div class="header-misc">
-							<a href="/contact.html" class="button button-rounded ms-3 d-none d-sm-block">Empezar</a>
+							<a href="https://wa.me/584128656780" target="_blank" class="button button-rounded ms-3 d-none d-sm-block">Empezar</a>
 						</div>
 
 						<div class="primary-menu-trigger">
@@ -216,7 +216,7 @@
 							<div class="badge rounded-pill badge-default">Servicios</div>
 							<h2 class="display-4 fw-bold">Construimos tus ideas.</h2>
 							<p>La primera impresión es la más importante, tu sitio web es tu carta de presentación y nuestro equipo de trabajo es experto en planificar, diseñar, mantener y plasmar todo lo que imaginas en función de crear el espacio ideal para transmitir el mensaje de tu marca y alcanzar los objetivos que tienes trazados.</p>
-							<a href="/contact.html" class="button button-rounded button-large text-transform-none ls-0">Empezar</a>
+							<a href="https://wa.me/584128656780" target="_blank" class="button button-rounded button-large text-transform-none ls-0">Empezar</a>
 							<a href="/contact.html" class="button button-rounded button-large button-light text-dark bg-white border text-transform-none ls-0">Contacto</a>
 						</div>
 						<div class="col-lg-6 mt-4 mt-lg-0">
