--- a/social.html
+++ b/social.html
@@ -94,7 +94,7 @@
 						</div><!-- #logo end -->
 
 						<div class="header-misc">
-							<a href="/contact.html" class="button button-rounded ms-3 d-none d-sm-block">Empezar</a>
+							<a href="https://wa.me/584128656780" target="_blank" class="button button-rounded ms-3 d-none d-sm-block">Empezar</a>
 						</div>
 
 						<div class="primary-menu-trigger">
@@ -216,7 +216,7 @@
 							<div class="badge rounded-pill badge-default">Servicios</div>
 							<h2 class="display-4 fw-bold">Gestión de contenidos.</h2>
 							<p>Te ayudamos a mantener y actualizar el contenido de tu sitio web y manejo de redes sociales.</p>
-							<a href="/contact.html" class="button button-rounded button-large text-transform-none ls-0">Empezar</a>
+							<a href="https://wa.me/584128656780" target="_blank" class="button button-rounded button-large text-transform-none ls-0">Empezar</a>
 							<a href="/contact.html" class="button button-rounded button-large button-light text-dark bg-white border text-transform-none ls-0">Contacto</a>
 						</div>
 						<div class="col-lg-6 mt-4 mt-lg-0">
