--- a/contact.html
+++ b/contact.html
@@ -221,7 +221,7 @@
 
 				<div class="container mb-3">
 					<div class="row justify-content-between">
-						<div class="col-lg-3 col-md-6">
+						<!-- <div class="col-lg-3 col-md-6">
 							<div class="feature-box flex-column text-center">
 								<div class="fbox-image text-center mb-3">
 									<img height="120" src="demos/seo/images/icons/seo.svg" alt="Feature Icon">
@@ -232,9 +232,9 @@
 									<p>Av. Bolivar con Soublette, Centro, Maracay frente a la Plaza Bicentenaria, local E-26</p>
 								</div>
 							</div>
-						</div>
+						</div> -->
 
-						<div class="col-lg-3 col-md-6">
+						<div class="col-lg-6 col-md-6">
 							<div class="feature-box flex-column text-center">
 								<div class="fbox-image text-center mb-3">
 									<img height="120" src="demos/seo/images/icons/social.svg" alt="Feature Icon">
@@ -248,7 +248,7 @@
 							</div>
 						</div>
 
-						<div class="col-lg-3 col-md-6">
+						<div class="col-lg-6 col-md-6">
 							<div class="feature-box flex-column text-center">
 								<div class="fbox-image text-center mb-3">
 									<img height="120" src="demos/seo/images/icons/group.svg" alt="Feature Icon">
@@ -268,7 +268,7 @@
 				<!-- Google Map
 				============================================= -->
 				<div class="text-center col-lg-12 min-vh-40">
-                    <img src="https://www.datocms-assets.com/132513/1716861210-mapa.jpg" alt="ubicación">
+                    <!-- <img src="https://www.datocms-assets.com/132513/1716861210-mapa.jpg" alt="ubicación"> -->
                 </div>
                 
 			</div>
